package com.daylog;

import java.time.LocalDateTime;
import java.util.ArrayList;

public class Log {
    LocalDateTime dateTime;
    ArrayList<Task> tasks;
}
