package com.daylog;

public class Task {
    String description;
}
