package com.daylog;

public enum TaskType {
    RESEARCH,
    CODING,
    DESIGN
}
